# petowo

./: .gitignore  README.md
internal/: .env  Dockerfile  Makefile  README.md  console.sh  docker-compose.yaml  pyproject.toml  requirements.txt
internal/api/app/: app.py  container.py
internal/console/tech/: app.py  config.py  container.py
internal/database/py/: databasemaker.py  infogenerator.py  setdb.py
internal/database/sql/: constraints.sql  copy_tables.sql  create_tables.sql  drop_tables.sql  roles.sql  test_trigger.sql  trigger.sql
internal/docker/: app.sh  psql.sh
internal/src/: app.py  container.py
internal/src/api/: openapi.json  readme.md
internal/src/api/router/: animal.py  auth.py  score.py  show.py  user.py
internal/src/auth_provider/storage/: auth.py
internal/src/auth_provider/utils/: exceptions.py
internal/src/core/utils/: types.py
internal/src/repository/sqlalchemy/: animal.py  certificate.py
internal/src/tech/: console.py
internal/src/tech/dto/: animal.py  score.py  show.py
internal/src/tech/handlers/: animal.py  (+3 more)
internal/tests/: conftest.py
internal/tests/core/: test_animal.py  test_auth.py  test_group.py  test_score.py  test_show.py  test_species.py  test_standard.py  test_user.py
internal/tests/fixtures/: animal.py  animalshow.py  breed.py  container.py  group.py  score.py  show.py  species.py  standard.py  user.py  usershow.py
internal/tests/repository/: test_animal.py  test_animalshow.py  test_breed.py  test_group.py  test_score.py  test_show.py  test_species.py  test_standard.py  test_user.py  test_usershow.py
(+60 files in other folders)
