[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry]
packages = [
    { include = 'petowo', from = 'src' }
]

[tool.coverage.run]
branch = true
source = ['petowo']

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
